--- a/main.css
+++ b/main.css
@@ -2,4 +2,4 @@
 html   { width: 100%; height: 100%; cursor: none; }
 body   { width: 100%; height: 100%; }
 div    { width: 100%; height: 100%; }
-canvas { width: 100%; height: 100%; background-color: black; filter: brightness(100%) saturate(200%); }
+canvas { width: 100%; height: 100%; filter: brightness(100%) saturate(200%); }
