--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 ::-webkit-scrollbar { display: none; }
+/*html   { width: 100%; height: 100%; cursor: none; } */
 html   { width: 100%; height: 100%; cursor: none; }
 body   { width: 100%; height: 100%; }
 div    { width: 100%; height: 100%; }
